--- a/src/app/cats/components/main-content/main-content.component.html
+++ b/src/app/cats/components/main-content/main-content.component.html
@@ -19,6 +19,6 @@
     <td mat-cell *matCellDef="let cat"> {{cat.weight.metric}} k</td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr class="header-row-color" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
